actually fix overlap

--- a/millendsparkCSS/millendspark.css
+++ b/millendsparkCSS/millendspark.css
@@ -63,7 +63,7 @@ h2{
 .zoomed{
 	width: 45vh;
 	height: 45vh;
-	padding-top: 10vh;
+	padding-top: 5vh;
 }
 
 .mini-site{
